Fixed merge problem - reinstalled Firebase as it was missing from package.json Commented out the missing background image on ScheduleAppt.css

--- a/src/PagesCSS/ScheduleAppt.css
+++ b/src/PagesCSS/ScheduleAppt.css
@@ -89,7 +89,7 @@
   }
   
   .MainApp .appoint_background{
-    background-image: url('../assets/apointment_page.jpg');
+    /* background-image: url('../assets/apointment_page.jpg'); */
     height: 75vh;
     background-size: cover;
 }
